# alpha-fs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  script_init.py  script_process.py
alphafs/: config.py  datareader.py  exceptions.py  identification.py  initiation.py  log.py  messages.py  modification.py  parser.py  postprocess.py  process.py  string.py  system.py
dev/: commit-msg.py  git-hook.sh
